// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object as a list of key value pairs 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base heading"
    >
      Issued
    </dt>
    <dd
      className="base regular base text"
    >
      2018-12-08
    </dd>
  </div>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base heading"
    >
      Due
    </dt>
    <dd
      className="base regular base text"
    >
      2019-01-06
    </dd>
  </div>
</dl>
`;

exports[`renders an object as a list of key value pairs with an element 1`] = `
<dl
  className="descriptionList"
>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base heading"
    >
      Foo
    </dt>
    <dd
      className="base regular base text"
    >
      Foo
    </dd>
  </div>
  <div
    className="termGroup"
  >
    <dt
      className="base regular base heading"
    >
      Bar
    </dt>
    <dd
      className="base regular base text"
    >
      Bar
    </dd>
  </div>
</dl>
`;
